Updated sizing of images to ensure they do not go out of container

--- a/src/App.css
+++ b/src/App.css
@@ -57,6 +57,12 @@ body {
   margin-bottom: 0;
 }
 
+.gridImage{
+  height: 80%;
+  width: 80%;
+  object-fit: contain;
+}
+
 .ui.grid>* {
   padding-left: 0;
 }
